# zk-benchmarking

./: .gitignore
plot/: Cargo.toml  results.csv
plot/src/: main.rs
risczero/: Cargo.toml  launch.sh
risczero/host/: Cargo.toml
risczero/host/src/: main.rs
risczero/host/src/benches/: big_sha2.rs  bubble_sort.rs  ecdsa_then_hashes.rs  fact.rs  helpers.rs  iter_ecdsa.rs  iter_sha2.rs  iter_sha2_pure.rs  mod.rs  provers.rs  xp.rs  xp2.rs
risczero/methods/: Cargo.toml
risczero/methods/guest/: Cargo.toml
rustbench/src/: lib.rs
