[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
risczero-benchmark-methods = { path = "../methods" }
rustbench = { path = "../../rustbench" }
serde = "1.0"
sha2 = "0.10"
risc0-zkp = { git = "https://github.com/risc0/risc0.git", default-features = false }
risc0-zkvm = { git = "https://github.com/risc0/risc0.git", features = [ "std", "prove" ] }
bincode = "1.3.3"
