[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
risczero-benchmark-methods = { path = "../methods" }
rustbench = { path = "../../rustbench" }
serde = "1.0"
sha2 = "0.10.6"
risc0-zkp = { version = "0.17.0", default-features = false }
risc0-zkvm = { version = "0.17.0", features = [ "std", "prove" ] }
bincode = "1.3.3"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }
rand_core = "0.6.4"
