[package]
name = "risczero-benchmark-methods"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm =  { version = "0.17.0", default-features = false, features = [ "std" ] }
hex-literal = "0.4"
k256 = { version = "=0.13.1", features = ["arithmetic", "serde", "expose-field", "std", "ecdsa"], default_features = false }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
# sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2/v0.10.6-risc0" }
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", rev = "7cda5226b05000b85ca4daa7846c28476079520c" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.1-risc0"  }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risc0" }
